# magic-item-shop

./: .gitignore  Dockerfile  README.md  app.py  index.html  index_items.py  pyproject.toml
.claude/: settings.local.json
magic_items/: Abjurer_s Bangle.md  Absorbing Tattoo.md  Acheron Blade.md  Aciurgist_s Blade.md  Acorn Charm.md  Adamantine Armor.md  Adamantine Weapon.md  Adventurer_s Overcoat.md  Aged Goodberry Wine.md  Air Render.md  Alchemical Compendium.md  Alchemist_s Potion Belt.md  Alchemy Jug.md  All-Purpose Tool.md  Ambitious Medic_s Box.md  Amethyst Lodestone.md  Ammunition of Slaying.md  Ammunition, +1, +2, or +3.md  Amulet of Buoyancy.md  Amulet of Health.md  Amulet of Immutability.md  Amulet of Proof Against Detection and Location.md  Amulet of Yenna_s Protection.md  Amulet of the Black Skull.md  Amulet of the Devout.md  Amulet of the Drunkard.md  Amulet of the Lycanthrope.md  Amulet of the Planes.md  Amulet of the Sentinel.md  Amulet of the Spirit Naga.md  Angler_s Armor.md  Angler_s Worldly Fisher.md  Animated Shield.md  Antimagic Armor.md  Ao Hai_s Fang.md  Apparatus of Kwalish.md  Appraiser_s Eye.md  Arborguard Shield.md  Arc of the Alicorn.md  Arcane Cannon.md  (+989 more)
